--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,20 +7,26 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="container">
-      <fieldset>
-        <form action="/" method="post">
-          <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-          <input type="submit" class="ghost-button" value="Get Weather">
-        </form>
-        <% if(weather !== null) { %>
-            <p><%= weather %></p>
-        <% } %>
+    <div class="parent-container">
 
-        <% if(error !== null){ %>
-            <p><%= error %></p>
-        <% } %>
-      </fieldset>
+        <div class="search-container">
+            <fieldset>
+                <form action="/" method="post">
+                    <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+                    <input type="submit" class="ghost-button" value="Get Weather">
+                </form>
+            </fieldset>
+        </div>
+
+        <div class="results-container">
+            <% if(weather !== null) { %>
+                <p><%= weather %></p>
+            <% } %>
+    
+            <% if(error !== null){ %>
+                <p><%= error %></p>
+            <% } %>
+        </div>
     </div>
   </body>
 </html>
